[package]
name = "oj-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
run_script = "0.10.0"
config = "0.13.2"
dirs = "4.0.0"
owo-colors = "3.4.0"
chrono = "0.4.22"
path-calculate = "0.1.3"